@@ -3,7 +3,7 @@ author  = JT Smith <jt@plainblack.com>
 license = Perl_5
 copyright_holder = Plain Black Corporation
 copyright_year   = 2012
-version = 1.0401
+version = 1.0500
 
 [@Classic]
 
@@ -18,9 +18,7 @@ Any::Moose = 0.13
 JSON = 2.16
 Test::More = 0
 URI = 1.54
-LWP = 6.02
-LWP::Protocol::https = 6.02
-Mozilla::CA = 20110409
+AnyEvent::HTTP::LWP::UserAgent = 0.8
 DateTime = 0.61
 DateTime::Format::Strptime = 1.4000
 MIME::Base64::URLSafe = 0.01
