@@ -1,9 +1,9 @@
 package Facebook::Graph::Publish;
 
 use Any::Moose;
-use Facebook::Graph::Response;
+use Facebook::Graph::Request;
 with 'Facebook::Graph::Role::Uri';
-use LWP::UserAgent;
+use AnyEvent::HTTP::LWP::UserAgent;
 use URI::Escape;
 
 has secret => (
@@ -20,10 +20,6 @@ has access_token => (
 has object_name => (
     is          => 'rw',
     default     => 'me',
-);
-
-has ua => (
-    is => 'rw',
 );
 
 sub to {
@@ -45,13 +41,9 @@ sub publish {
     my ($self) = @_;
     my $uri = $self->uri;
     $uri->path($self->object_name.$self->object_path);
-    my $response = ($self->ua || LWP::UserAgent->new)->post($uri, $self->get_post_params);
-    my %params = (response => $response);
-    if ($self->has_secret) {
-        $params{secret} = $self->secret;
-    }
-    return Facebook::Graph::Response->new(%params);
+    return Facebook::Graph::Request->new->post($uri, $self->get_post_params)->recv;
 }
+
 
 no Any::Moose;
 __PACKAGE__->meta->make_immutable;
