@@ -1,9 +1,8 @@
 package Facebook::Graph::Query;
 
 use Any::Moose;
-use Facebook::Graph::Response;
+use Facebook::Graph::Request;
 with 'Facebook::Graph::Role::Uri';
-use LWP::UserAgent;
 use URI::Escape;
 
 has secret => (
@@ -75,10 +74,6 @@ has until => (
 has since => (
     is          => 'rw',
     predicate   => 'has_since',
-);
-
-has ua => (
-    is => 'rw',
 );
 
 sub limit_results {
@@ -197,14 +192,8 @@ sub uri_as_string {
 }
 
 sub request {
-    my ($self, $uri) = @_;
-    $uri ||= $self->uri_as_string;
-    my $response = ($self->ua || LWP::UserAgent->new)->get($uri);
-    my %params = (response => $response);
-    if ($self->has_secret) {
-        $params{secret} = $self->secret;
-    }
-    return Facebook::Graph::Response->new(%params);
+    my ($self) = @_;
+    return Facebook::Graph::Request->new->get($self->uri_as_string)->recv;
 }
 
 no Any::Moose;
